# riverflow

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  hatch_build.py  pyproject.toml
assets/: logo.xcf
core/: __init__.py  dag_executor.py  errors.py  riverflow.py  task.py
core/operators/: dummy.py
server/: __init__.py  api.py  setup.py
src/: main.py
src/riverflow/: __init__.py  __main__.py  _serve.py
src/riverflow/core/: __init__.py  dag.py  dag_executor.py  errors.py  log_store.py  logger.py  riverflow.py  run_context.py  task.py  task_executor.py
src/riverflow/core/operators/: __init__.py
src/riverflow/models/: __init__.py  converters.py  dag.py  host.py  log.py  run.py  status.py  task.py
src/riverflow/server/: api.py  graph_layout.py  host_metrics.py  setup.py  templates.py  ws.py
src/riverflow/server/ui/: app.js  index.html  styles.css
src/riverflow/server/ui/components/: App.js  DagGraph.js  (+4 more)
tests/: conftest.py
tests/core/: test_dag_executor.py  test_log_store.py  test_logger.py  test_riverflow.py  test_task_executor.py
tests/server/: test_api.py
ui/: AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
ui-src/: package-lock.json  package.json  tsconfig.json
ui-src/src/: riverflow.ts
ui-src/src/types/: models.ts
ui/src/: api.ts  index.css  main.tsx  types.ts
ui/src/components/: ActivityChart.tsx  CommandPalette.tsx  LogViewer.tsx  Logo.tsx  QueryState.tsx  RelativeTime.tsx  RunStrip.tsx  Shell.tsx  Skeleton.tsx  Sparkline.tsx  StatusBadge.tsx  TimeSeriesChart.tsx  Toast.tsx  TriggerRunDialog.tsx  icons.tsx
ui/src/hooks/: useLiveUpdates.ts  useLocalStorage.ts  usePrefetchDag.ts  useRowNav.ts  useShortcut.ts  useToast.ts  useUrlState.ts  useWebSocket.ts
ui/src/lib/: utils.ts
ui/src/pages/: DAGDetail.tsx  DAGGantt.tsx  DAGGraph.tsx  DAGGrid.tsx  DAGList.tsx  Dashboard.tsx  Host.tsx  RunDetail.tsx  Settings.tsx
(+24 files in other folders)
