[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riverflow"
version = "0.1.0"
description = "A lightweight, Python-native workflow orchestration library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi[standard]>=0.120.2",
    "pytz>=2025.2",
]
authors = [{ name = "Marco Graziano" }]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[tool.hatch.build.targets.wheel]
packages = ["riverflow"]
