[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riverflow"
version = "0.8.1"
description = "A lightweight, Python-native workflow orchestration library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi[standard]>=0.135.3",
    "pydantic>=2.12.5",
    "pytz>=2026.1.post1",
]
authors = [{ name = "Marco Graziano" }]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/riverflow"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build]
artifacts = [
    "src/riverflow/server/ui/dist/**",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
